# openpower-libhei

./: .clang-format  .eslintignore  .gitignore  MAINTAINERS  OWNERS  README.md  buildinfo.hpp.in  groups  hei_build_info.hpp.in  hei_isolator.cpp  hei_isolator.hpp  hei_user_defines.hpp  hei_user_interface.hpp  meson.build  meson.options  meson_options.txt  project.config
chip_data/: chip-data-json.md  chip_data_json.md  json_list.sh  meson.build  parse_chip_data.py  setup.py
chip_data/explorer/: chip_explorer.json  node_chiplet_ocmb_fir.json  node_chiplet_ocmb_spa_fir.json  node_mcbistfir.json  node_mmiofir.json  node_ocmb_lfir.json  node_omi_dl_err_rpt.json  node_omi_dl_fir.json  node_rdffir.json  node_srqfir.json  node_tlx_err_rpt_1.json  node_tlxfir.json
chip_data/odyssey/: chip_odyssey.json  node_cfir_mem.json  node_cfir_tp.json  node_dlx_err_rpt.json  node_dlx_fir.json  node_gfir.json  node_mcbist_fir.json  node_mem_local_fir.json  node_mmio_fir.json  node_ocmb_phy_fir.json  node_odp_fir.json  node_rdf_fir.json  node_srq_fir.json  node_tlx_fir.json  node_tp_local_fir.json  pll_unlock.json
chip_data/p10_10/: eq_spattn.json  iohs_dlp_phy_config.json  mc_omi_dl_err_rpt.json  node_cfir_eq.json  node_cfir_iohs.json  node_cfir_mc.json  node_cfir_n0.json  node_cfir_n1.json  node_cfir_paue.json  node_cfir_pauw.json  node_cfir_pci.json  node_cfir_tp.json  node_eq_core_fir.json  node_eq_l2_fir.json  node_eq_l3_fir.json  node_eq_local_fir.json  node_eq_ncu_fir.json  node_eq_qme_fir.json  node_gfir.json  node_hca_fir.json  node_int_cq_fir.json  node_iohs_local_fir.json  node_lpc_fir.json  node_mc_dstl_fir.json  node_mc_fir.json  node_mc_local_fir.json  node_mc_misc_fir.json  node_mc_omi_dl_fir.json  node_mc_ustl_fir.json  node_mcd_fir.json  node_n0_local_fir.json  node_n1_local_fir.json  node_nmmu_cq_fir.json  node_nmmu_fir.json  node_nx_cq_fir.json  node_nx_dma_eng_fir.json  node_occ_fir.json  node_pau_dl_fir.json  node_pau_fir_0.json  node_pau_fir_1.json  (+32 more)
chip_data/p10_20/: eq_spattn.json  iohs_dlp_phy_config.json  mc_omi_dl_err_rpt.json  node_cfir_eq.json  node_cfir_iohs.json  node_cfir_mc.json  node_cfir_n0.json  node_cfir_n1.json  node_cfir_paue.json  node_cfir_pauw.json  node_cfir_pci.json  node_cfir_tp.json  node_eq_core_fir.json  node_eq_l2_fir.json  node_eq_l3_fir.json  node_eq_local_fir.json  node_eq_ncu_fir.json  node_eq_qme_fir.json  node_gfir.json  node_hca_fir.json  node_int_cq_fir.json  node_iohs_local_fir.json  node_lpc_fir.json  node_mc_dstl_fir.json  node_mc_fir.json  node_mc_local_fir.json  node_mc_misc_fir.json  node_mc_omi_dl_fir.json  node_mc_ustl_fir.json  node_mcd_fir.json  node_n0_local_fir.json  node_n1_local_fir.json  node_nmmu_cq_fir.json  node_nmmu_fir.json  node_nx_cq_fir.json  node_nx_dma_eng_fir.json  node_occ_fir.json  node_pau_fir_0.json  node_pau_fir_1.json  node_pau_fir_2.json  (+32 more)
chip_data/pyprd/chip_data/: binary.py  chip_data.py  json.py  peltool.py
chip_data/pyprd/util/: hash.py  model_ec.py
chip_data/schema/: chip-data-schema-v01.json
sim/: hei_sim_main.cpp  hei_trace.hpp  hei_user_defines.hpp  meson.build
src/: bitstring.hpp  chip_data_stream.cpp  chip_data_stream.hpp  chip_data_stream_test.cpp  hei_buildinfo.hpp  hei_chip.hpp  hei_includes.hpp  test.cpp  (+12 more)
test/: bit_string_test.cpp  bitstring_gtest.cpp  bitstring_test.cpp  flyweight_test.cpp  hei_operator_register_testcase.cpp  hei_user_defines.cpp  hei_user_defines.hpp  meson.build  operator_register_test.cpp  sim_tracing.cpp  test-util-hash.cpp
test/simulator/: hei_sim_main.cpp  hei_sim_user_interface.cpp  hei_user_interface.cpp  meson.build  sample_test_case.cpp  sim_hardware_access.cpp  simulator.cpp  simulator.hpp  user_interface.cpp
test/simulator/chip_data/: chip_data_sample.cdb  sample.cdb
test/simulator/sample_data/: chip_sample.xml  node_cfir0.xml  node_cfir1.xml  node_gfir.xml  node_lfir0.xml  node_lfir1.xml  node_lfir2.xml  sample.cdb
test/simulator/test_cases/: exp20_foxhound7.cpp
test/simulator/testcases/: eq_core_fir.cpp  exp20_foxhound7.cpp  exp20_tlx_err1_report.cpp  exp20_tlx_err_rpt_1.cpp  meson.build  ody_mcbist2.cpp  omi_dl_fatal.cpp  sample_test_case.cpp  tod_fault.cpp
xml/: build_chip_data_binary  chip_data_xml.md  meson.build  node.xsd  parse_chip_data_xml  setup.py  xml_list.sh
xml/explorer/: chip_explorer.xml  node_chiplet_ocmb_fir.xml  node_chiplet_ocmb_spa_fir.xml  node_mcbistfir.xml  node_mmiofir.xml  node_ocmb_lfir.xml  node_ocmb_lfir_ffdc_foxhound.xml  node_ocmb_omi_dl.xml  node_ocmb_omi_dl_error_hold.xml  node_ocmb_omi_dl_fir.xml  node_omi_dl.xml  node_omi_dl0_err_hold.xml  node_omi_dl_err_hold.xml  node_omi_dl_err_rpt.xml  node_omi_dl_fir.xml  node_omidl_err_hold.xml  node_omidlfir.xml  node_rdffir.xml  node_srqfir.xml  node_tlx_err1_report.xml  node_tlx_err_rpt_1.xml  node_tlxfir.xml
xml/lib/: BitRange.pm
xml/odyssey/: chip_odyssey.xml  node_cfir_mem.xml  node_cfir_tp.xml  node_dlx_err_rpt.xml  node_dlx_fir.xml  node_gfir.xml  node_mcbist_fir.xml  node_mem_local_fir.xml  node_mmio_fir.xml  node_ocmb_phy_fir.xml  node_odp_fir.xml  node_rdf_fir.xml  node_srq_fir.xml  node_tlx_fir.xml  node_tp_local_fir.xml
xml/p10/: chip_p10.xml  node_cfir_eq_cs.xml  node_cfir_eq_ha.xml  node_cfir_eq_re.xml  node_cfir_eq_spa.xml  node_cfir_eq_ucs.xml  node_cfir_iohs_cs.xml  node_cfir_iohs_cs_re_spa.xml  node_cfir_iohs_ha.xml  node_cfir_iohs_re.xml  node_cfir_iohs_spa.xml  node_cfir_iohs_ucs.xml  node_cfir_iohs_ucs_ha.xml  node_cfir_mc_cs.xml  node_cfir_mc_cs_re_spa.xml  node_cfir_mc_ha.xml  node_cfir_mc_re.xml  node_cfir_mc_spa.xml  node_cfir_mc_ucs.xml  node_cfir_mc_ucs_ha.xml  node_cfir_n0_cs.xml  node_cfir_n0_cs_re.xml  node_cfir_n0_ha.xml  node_cfir_n0_re.xml  node_cfir_n0_spa.xml  node_cfir_n0_ucs.xml  node_cfir_n1_cs.xml  node_cfir_n1_ha.xml  node_cfir_n1_re.xml  node_cfir_n1_spa.xml  node_cfir_n1_ucs.xml  node_cfir_paue_cs.xml  node_cfir_paue_cs_p10_10.xml  node_cfir_paue_cs_re.xml  node_cfir_paue_cs_re_p10_10.xml  node_cfir_paue_ha.xml  node_cfir_paue_re.xml  node_cfir_paue_re_p10_10.xml  node_cfir_paue_spa.xml  node_cfir_paue_spa_p10_10.xml  (+111 more)
(+97 files in other folders)
